Make only tables container scrollable. Fix alert css to not overflow. Refetch after each operation

--- a/src/Components/Alert/Alert.css
+++ b/src/Components/Alert/Alert.css
@@ -8,7 +8,7 @@
   text-align: center;
   border-radius: 15px;
   color: white;
-  transform: translateY(calc(100% + 10vh));
+  transform: translateY(calc(10vh));
   opacity: 0;
   transition: all 300ms;
   z-index: 100;
